[tool.mypy]
ignore_missing_imports = true
strict = true
# If certain strict config options are too pedantic for a project,
# disable them selectively here by setting to false.

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.poetry]
name = "fact"
version = "0.1.0"
description = ""
authors = ["remexemer <tingshuo.hsu@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
    # Include this classifier to prevent accidently publishing private code to PyPI.
    #   https://pypi.org/classifiers/
    "Private :: Do Not Upload",
]

[tool.poetry.scripts]
fact = "fact.cli:app"

[tool.poetry.dependencies]
python = "^3.9, <3.12"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
rich = "^13.5.3"
typer = "^0.9.0"
mypy = "^1.5.1"
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
